# RayTracer

raytracer/: Cargo.toml
raytracer/sources/: mars.jpg:Zone.Identifier  metal.jpg:Zone.Identifier  sea.webp:Zone.Identifier  sky.jpg:Zone.Identifier  tu.jpg:Zone.Identifier  v2-4898bc78876a4a399c915bae66eed1bf_r.jpg:Zone.Identifier  wood.jpg:Zone.Identifier
raytracer/src/: camera.rs  getobj.rs  main.rs  material.rs  perlin.rs  ray.rs  scene.rs  shape.rs  texture.rs  tool.rs  vec3.rs
