[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
console = "0.9.1"
indicatif = "0.16.2"
rand = "0.8.5"
num_cpus = '1.14'
stb_image = "0.2.5"
rayon = "1.5"
tobj = "4.0.0"